Make button toolbars wrap nicely with gap (thanks to @jonathon-love,  https://github.com/JATOS/JATOS/issues/259) Result pages: Hide search and filter toolbar for mobile and tables

--- a/modules/gui/app/assets/stylesheets/main.less
+++ b/modules/gui/app/assets/stylesheets/main.less
@@ -331,6 +331,15 @@ table.dataTable tbody > tr > td {
     overflow: auto;
 }
 
+/*
+ * Button toolbar wrap nicely with gap
+ */
+.toolbarFlexWrap {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 5px;
+}
+
 @import 'apps/_study.less';         // Study related views
 @import 'apps/_admin.less';         // Admin related views
 @import 'apps/_studyLinks.less';    // Study links and Batch related views
